# tprdb-utilities

./: .gitignore  README.md  pyproject.toml
src/tprdb_utilities/: __init__.py  fetcher.py  reader.py  transformer.py
src/tprdb_utilities/transformer/: __init__.py  parallel_texts.py  pause_metrics.py  word_translation_entropy.py
